fixed another spacing issue

--- a/css/custom/fieldset.css
+++ b/css/custom/fieldset.css
@@ -1,7 +1,6 @@
 fieldset {
   display: flex;
   flex-flow: column wrap;
-  gap: 8px 8px;
 }
 
 /* ==========================================================================
